improved appearance on smaller screens by forcing the sidebars to be a fixed width and decreasing the size of some header elements

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -3,7 +3,6 @@
 #header {
     position: absolute;
     left: $sidebarWidth;
-    width:  100% - 2*$sidebarWidth;
     height: $headerHeight;
     z-index: 1;
     border-bottom: 1px solid;
