--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,11 @@
 @import "base";
 @import "compass/css3/user-interface";
 
-html, body {
+body {
     width:  100%;
     height: 100%;
     margin: 0;
+    overflow: hidden;
     font-family: Sans-serif;
     line-height: 20px;
     font-size: 14px;
@@ -251,7 +252,6 @@ input[type=text], input[type=password], input[type=email] {
     position: absolute;
     left: $sidebarWidth;
     top: $headerHeight+1;
-    width: 100% - 2*$sidebarWidth;
 
     background-image: url('/img/overview.png');
     background-size: contain;
