--- a/sass/tracker.scss
+++ b/sass/tracker.scss
@@ -3,7 +3,6 @@
 #tracker {
     position: absolute;
     left: $sidebarWidth;
-    width: 100% - 2*$sidebarWidth;
     table-layout: fixed;
 
     .tracker {
